...
                        android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/sort_league"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/list_of_team" android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
